# Flowger

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.agents/rules/: 00-workspace-foundation.md  10-python-structure.md  20-quality-gates.md  30-cli-entrypoints.md
.agents/skills/code-review-and-quality/: SKILL.md
.agents/skills/external-docs-and-safety/: SKILL.md
.agents/skills/iterative-implementation/: SKILL.md
.agents/skills/python-project-architecture/: SKILL.md
.agents/skills/python-testing/: SKILL.md
.agents/workflows/: implement-step.md  next-step.md  review-step.md
.github/instructions/: review.instructions.md
.github/workflows/: ci.yml  docker-publish.yml
.qwen/: settings.json
docs/: spec.md
flowger/: __init__.py  cli.py  config.py
flowger/application/: __init__.py  authorize_session.py  banking.py  export.py  export_transactions.py  ports.py  repositories.py  session_repository.py  sync_accounts.py  sync_transactions.py  transaction_repository.py  use_cases.py
flowger/domain/: __init__.py  account.py  bank_session.py  exceptions.py  models.py  payment_type.py  ports.py  transaction.py
flowger/entrypoints/cli/: helpers.py  main.py
flowger/entrypoints/cli/commands/: accounts.py  authorize.py  config.py  daemon.py  export.py  login.py  setup.py  sync.py  sync_transactions.py
flowger/infrastructure/: config.py  csv_exporter.py  database.py  db_models.py  enable_banking.py  repositories.py  stub_provider.py
flowger/infrastructure/enable_banking/: __init__.py  auth.py  client.py  provider.py
flowger/infrastructure/exporters/: csv.py
flowger/infrastructure/sqlite/: __init__.py  account_repository.py  base.py  session_repository.py  transaction_repository.py
tests/: conftest.py  test_csv_exporter.py  test_domain.py  test_repository.py  test_use_cases.py
tests/application/: test_export_transactions.py  test_sync_accounts.py  test_sync_transactions.py  test_use_cases.py
tests/domain/: test_account.py  test_models.py  test_transaction.py
tests/entrypoints/: test_accounts_command.py  test_authorize_command.py  test_daemon_command.py  test_export_command.py  test_helpers.py  test_login_command.py  test_setup_command.py  test_sync_command.py
tests/infrastructure/: test_config.py  test_csv_exporter.py  test_database.py  test_session_repository.py
tests/infrastructure/enable_banking/: __init__.py  test_auth.py  test_client.py  test_provider.py  test_provider_session.py
tests/infrastructure/sqlite/: test_account_repository.py  test_session_repository.py  test_transaction_repository.py
