[project]
name = "flowger"
version = "0.1.0"
description = "Sync bank transactions locally and export to CSV"
authors = [{name = "User"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
flowger = "flowger.entrypoints.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
